--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
     <br>
         做一个斜杠青年
     </p>
-    <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">马上应征</a></p>
+    <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">前往邀约</a></p>
 </div>
 
 <section id="company">
