implment search job

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,18 +1,27 @@
+<div class= "search">
+  <%= search_form_for @search do |f| %>
+    <%= f.label :title_cont %>
+    <%= f.search_field :title_cont %>
+    <%= f.submit %>
+  <% end %>
+</div>
 <div class="dropdown clearfix pull-right">
+
     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuDivider" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
       排序
         <span class="caret"></span>
     </button>
+
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuDivider">
         <li>
-          <%= link_to("按照薪资下限排序", jobs_path(:order => "by_lower_bound")) %>
+          <%= sort_link @search, :wage_lower_bound, "薪资下限排序" %>
         </li>
         <li>
-            <%= link_to("按照薪资上限排序", jobs_path(:order => "by_upper_bound")) %>
+            <%= sort_link @search, :wage_upper_bound, "薪资上限排序" %>
 
         </li>
         <li>
-          <%= link_to("按照发表时间排序", jobs_path ) %>
+          <%= sort_link @search, :created_at, "创建时间顺序" %>
 
         </li>
     </ul>
