chose a picture for stylesheets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -115,7 +115,7 @@
 }
 
 .jumbotron {
-    background-image: url('http://y.photo.qq.com/img?s=n0m7YMg0L&l=y.jpg');
+    background-image: url('https://ww3.sinaimg.cn/large/006tNc79gy1fcec2i0j0pj31kw11xb29.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     padding-bottom: 110px;
